--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <main>
     <header class="bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
-      <div class="flex flex-col lg:grid grid-cols-2 gap-x-10 items-center container max-w-7xl mx-auto px-4 sm:px-8 pt-20 pb-28">
+      <div class="flex flex-col lg:grid grid-cols-2 gap-x-10 items-center container max-w-[85rem] mx-auto px-4 sm:px-8 pt-20 pb-28">
         <div>
           <h1 class="font-display text-6xl leading-none text-slate-900 font-semibold mb-4">Redis</h1>
           <p class="text-slate-500 text-xl mb-7 max-w-xl">
@@ -17,6 +17,7 @@
               <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
               <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
             </div>
+            
             <img
               class="cli mix-blend-screen p-5"
               alt="terminal gif"
@@ -27,7 +28,7 @@
       </div>
     </header>
     <article class="">
-      <section class="text-center pb-28 container max-w-7xl mx-auto px-4 sm:px-8">
+      <section class="text-center pb-28 container max-w-[85rem] mx-auto px-4 sm:px-8">
         <h2 class="font-display text-4xl leading-tight text-slate-900 font-semibold mb-4 -mt-4">
           A vibrant, open source database
         </h2>
@@ -53,7 +54,7 @@
       </section>
 
       <section class="py-28 bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
-        <div class="container max-w-7xl mx-auto px-4 sm:px-8">
+        <div class="container max-w-[85rem] mx-auto px-4 sm:px-8">
           <h2 class="text-center font-display text-4xl leading-tight text-slate-900 font-semibold mb-10 -mt-4">
             Core capabilities
           </h2>
@@ -164,7 +165,7 @@
         </div>
       </section>
       <section class="pb-28">
-        <div class="container max-w-7xl mx-auto px-4 sm:px-8">
+        <div class="container max-w-[85rem] mx-auto px-4 sm:px-8">
           <h2 class="text-center font-display text-4xl leading-tight text-slate-900 font-semibold mb-10">
             Use cases
           </h2>
@@ -202,7 +203,7 @@
       </section>
 
       <section class="py-28 bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
-        <div class="container max-w-7xl mx-auto px-4 sm:px-8">
+        <div class="container max-w-[85rem] mx-auto px-4 sm:px-8">
           <h2 class="flex items-center justify-center text-center font-display text-4xl leading-tight text-slate-900 font-semibold mb-10">
             <div class="mr-4 w-9 -ml-9">
               {{ with resources.Get "icons/stack-icon.svg" }}
@@ -251,7 +252,7 @@
       </section>
 
       <section class="pb-28">
-        <div class="container max-w-7xl mx-auto px-4 sm:px-8">
+        <div class="container max-w-[85rem] mx-auto px-4 sm:px-8">
           <h2 class="text-center font-display text-4xl leading-tight text-slate-900 font-semibold mb-10">
             Redis Stack use cases
           </h2>
@@ -318,7 +319,7 @@
     </article>
 
     <div class="py-28 bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
-      <div class="container max-w-7xl mx-auto px-4 sm:px-8">
+      <div class="container max-w-[85rem] mx-auto px-4 sm:px-8">
         <h2 class="text-center font-display text-4xl leading-tight text-slate-900 font-semibold mb-10 -mt-4">
           Get started
         </h2>
