--- a/layouts/docs/bazzar.html
+++ b/layouts/docs/bazzar.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-  <main class="docs w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 md:grid grid-cols-[auto,1fr,auto] gap-16 relative">
+  <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
     {{ partial "docs-nav.html" . }}
 
-    <section class="prose prose-slate py-12">
+    <section class="prose prose-slate w-full max-w-[47rem] py-12">
       {{ .Render "content" }}
 
       {{ $bazzar := $.Param "bazzar" }}
@@ -27,20 +27,11 @@
         {{ $has_groups = false }}
       {{ end }}
 
-      <p>
-        The recommended repositories are marked with a <i class="todo"></i></span>.<br />
-        Repositories with some activity within the latest six months are marked with a <i class="todo"></i>.<br />
-        Want your repository listed here? Just submit a PR to the <a href="https://github.com/redis/redis-doc/pull/new">redis-doc repository</a>
-      </p>
+      <h1>{{ .Title }}</h1>
 
-      {{ if $has_groups }}
-        <h3>Browse by {{ $group_name }}</h3>
-        <div class="bazzar-group">
-          {{ range $id, $name := $groups }}
-            <a href="#{{ $id }}">{{ $name }}</a>
-          {{ end }}
-        </div>
-      {{ end }}
+      <p class="max-w-xl">
+        The recommended repositories are marked with a <i class="todo"></i></span>. Repositories with some activity within the latest six months are marked with a <i class="todo"></i>. Want your repository listed here? Just submit a PR to the <a href="https://github.com/redis/redis-doc/pull/new">redis-doc repository</a>.
+      </p>
 
       <div class="bazzar-list">
         {{ range $id, $name := $groups }}
@@ -95,5 +86,34 @@
         {{ end }}
       </div>
     </section>
+
+    {{ if $has_groups }}
+      <aside class="hidden xl:block w-52 h-full shrink-0">
+        <nav class="w-52 z-40 bg-white hidden md:block overflow-auto fixed top-28 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
+          <dt class="font-semibold mb-3">Browse by {{ $group_name }}</dt>
+          <dd class="text-slate-600">
+            <ul id="TableOfContents">
+              {{ range $id, $name := $groups }}
+                <li>
+                  <a href="#{{ $id }}">{{ $name }}</a>
+                </li>
+              {{ end }}
+            </ul>
+          </dd>
+        </dl>
+      </aside>
+    {{ end }}
   </main>
 {{ end }}
+
+{{/*
+  <!--
+    <h3>Browse by {{ $group_name }}</h3>
+    <div class="text-sm grid grid-cols-[repeat(auto-fit,minmax(10rem,1fr))] gap-2">
+      {{ range $id, $name := $groups }}
+        <a class="flex items-center justify-center rounded-md p-2 no-underline transition text-slate-900 hover:text-indigo-900 focus-within:text-indigo-900 bg-white hover:bg-indigo-50/50 focus-within:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus-within:border-indigo-300 focus-within:ring-indigo-200 focus-within:ring-[3px] focus-within:outline-none bg-clip-padding shadow shadow-slate-900/5" href="#{{ $id }}">{{ $name }}</a>
+      {{ end }}
+    </div>
+    {{ end }}
+  -->
+*/}}
