--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-  <main class="docs w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 md:grid grid-cols-[auto,1fr,auto] gap-16 relative">
+  <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
     {{ partial "docs-nav.html" . }}
 
-    <section class="prose prose-slate py-12">
+    <section class="prose prose-slate w-full max-w-[47rem] py-12">
       <h1>{{ .Title }}</h1>
       {{ with .Params.description }}<p>{{ . | markdownify }}</p>{{ end }}
       {{ .Content }}
