--- a/layouts/partials/docs-toc.html
+++ b/layouts/partials/docs-toc.html
@@ -1,10 +1,9 @@
 {{ with .TableOfContents }}
   {{ if gt (len .) 32 }}
-    <aside class="hidden xl:flex">
-      <div class="w-48 h-full shrink-0"></div>
-      <dl class="w-48 z-40 bg-white hidden md:flex flex-col ml-auto fixed top-28 pb-16 h-full max-h-[calc(100vh-7rem)] overflow-y-auto lg:text-sm lg:leading-7">
+    <aside class="hidden xl:block w-52 h-full shrink-0">
+      <nav class="w-52 z-40 bg-white hidden md:block overflow-auto fixed top-28 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
         <dt class="font-semibold mb-3">On This Page</dt>
-        <dd>
+        <dd class="text-slate-700">
           {{ . }}
         </dd>
       </dl>
