--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -180,36 +180,6 @@ select {
   @apply flex-auto flex items-center min-w-0;
 }
 
-.search-item.result {
-  @apply mx-6 relative;
-}
-
-.search-item.result.search-item.child {
-  @apply ml-12;
-}
-
-.search-item.result.search-item.child:before {
-  content: '';
-  position: absolute;
-  top: -0.25rem;
-  bottom: -0.25rem;
-  left: -1rem;
-  width: 1px;
-  background: theme('colors.slate.200');
-}
-
-.search-item > a {
-  @apply relative block py-4 px-6;
-  font-size: 0.875rem;
-  border-bottom: 1px solid theme('colors.slate.100');
-}
-
-
-
-.search-item.result {
-  @apply border-b-0 !important;
-}
-
 .search-magnifier-label {
   @apply flex-none w-6 h-6;
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m19 19-3.5-3.5' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='11' cy='11' r='6' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
@@ -252,110 +222,83 @@ select {
   display: none;
 }
 
-.search-reset {
-  display: none;
-}
-
-.search-cancel {
+#search-cancel {
   appearance: none;
   flex: none;
   font-size: 0;
   border-radius: 0.375rem;
   padding: 0.25rem 0.375rem;
-  @apply ring-1 ring-slate-900/5 shadow-sm hover:ring-slate-900/10 hover:shadow;
+  @apply ring-1 ring-slate-900/10 shadow-sm hover:ring-slate-900/10 hover:shadow;
   width: 1.75rem;
   height: 1.5rem;
-  /* esc */
   background-image: url("data:image/svg+xml,%3Csvg width='16' height='7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.506 6h3.931V4.986H1.736v-1.39h2.488V2.583H1.736V1.196h2.69V.182H.506V6ZM8.56 1.855h1.18C9.721.818 8.87.102 7.574.102c-1.276 0-2.21.705-2.205 1.762-.003.858.602 1.35 1.585 1.585l.634.159c.633.153.986.335.988.727-.002.426-.406.716-1.03.716-.64 0-1.1-.295-1.14-.878h-1.19c.03 1.259.931 1.91 2.343 1.91 1.42 0 2.256-.68 2.259-1.745-.003-.969-.733-1.483-1.744-1.71l-.523-.125c-.506-.117-.93-.304-.92-.722 0-.375.332-.65.934-.65.588 0 .949.267.994.724ZM15.78 2.219C15.618.875 14.6.102 13.254.102c-1.537 0-2.71 1.086-2.71 2.989 0 1.898 1.153 2.989 2.71 2.989 1.492 0 2.392-.992 2.526-2.063l-1.244-.006c-.117.623-.606.98-1.262.98-.883 0-1.483-.656-1.483-1.9 0-1.21.591-1.9 1.492-1.9.673 0 1.159.389 1.253 1.028h1.244Z' fill='%23334155'/%3E%3C/svg%3E");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 57.1428571429% auto;
 }
 
-.search-reset svg {
-  display: none;
+#search-results {
+  @apply flex-auto overflow-auto pb-6 text-slate-700 font-normal min-h-[12.5rem];
+}
+
+.search-item .search-item-icon {
+  display: block;
+  flex: none;
+  margin-right: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='none' viewBox='0 0 24 24' stroke='%2394A3B8' stroke-width='1.5'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z' /%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.search-item:hover .search-item-icon,
+.search-item:focus-within .search-item-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='none' viewBox='0 0 24 24' stroke='%23818CF8' stroke-width='1.5'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z' /%3E%3C/svg%3E");
+}
+
+.search-item + .search-item {
+  @apply mt-2;
+}
+
+.search-item {
+  @apply bg-slate-50 rounded-xl mx-6 relative transition-colors text-slate-700;
+}
+
+.search-item:hover,
+.search-item:focus-within {
+  @apply bg-indigo-100 text-indigo-500;
+}
+
+.search-item > a {
+  @apply relative w-full p-4 grid grid-cols-[auto,1fr,auto] items-center;
+  font-size: 0.875rem;
+}
+
+.search-item-content {
+  @apply flex flex-col;
 }
 
 .search-item-source {
   line-height: 1.5rem;
   font-weight: 600;
   color: theme('colors.slate.900');
-  padding-top: 2.5rem;
+  padding-top: 2rem;
   margin: 0 1.5rem 1rem;
 }
 
-#search-results {
-  @apply flex-auto overflow-auto pb-6 text-slate-700 font-normal;
-}
-
-.search-item-Container {
-  display: flex;
-  align-items: center;
-}
-
-.search-item-Tree {
-  display: none;
-}
-
-.search-item-icon {
-  display: none;
-}
-
-.search-item.result .search-item-icon {
-  display: block;
-  flex: none;
-  margin-right: 1rem;
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: theme('borderRadius.md');
-  /* hash icon */
-  background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.75 1v10M8.25 1v10M1 3.75h10M1 8.25h10' stroke='%2394A3B8' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: center center;
-
-  @apply bg-white ring-1 ring-slate-900/5 shadow-sm;
-}
-
-.search-item.parent .search-item-icon {
-  /* book icon */
-  background-image: url("data:image/svg+xml,%3Csvg width='14' height='10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3.5 0c1.093 0 2.117.27 3 .743V10a6.344 6.344 0 0 0-3-.743c-1.093 0-2.617.27-3.5.743V.743C.883.27 2.407 0 3.5 0Z' fill='%23BAE6FD'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.5 0c1.093 0 2.617.27 3.5.743V10c-.883-.473-2.407-.743-3.5-.743s-2.117.27-3 .743V.743a6.344 6.344 0 0 1 3-.743Z' fill='%2338BDF8'/%3E%3C/svg%3E");
-}
-
-.search-item-icon svg {
-  display: none;
-}
-
-.search-item-content-wrapper {
-  flex: auto;
-  display: flex;
-  flex-direction: column-reverse;
-  min-width: 0;
-  z-index: 1;
-}
-
 .search-item-path {
+  grid-column-start: 2;
   align-self: flex-start;
+  margin-right: auto;
   font-size: 0.75rem;
   line-height: 1.5rem;
   font-weight: 600;
-  color: theme('colors.slate.700');
-  background: theme('colors.slate.100');
-  border-radius: 999px;
-  padding: 0 0.375rem;
-}
-
-.search-item[aria-selected='true'] .search-item-icon {
-  @apply bg-transparent shadow-none ring-1 ring-white/30;
-  background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.75 1v10M8.25 1v10M1 3.75h10M1 8.25h10' stroke='%23fff' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
-}
-
-.search-item[aria-selected='true'] .search-item.parent .search-item-icon {
-  /* book icon */
-  background-image: url("data:image/svg+xml,%3Csvg width='14' height='10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3.5 0c1.093 0 2.117.27 3 .743V10a6.344 6.344 0 0 0-3-.743c-1.093 0-2.617.27-3.5.743V.743C.883.27 2.407 0 3.5 0Z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.5 0c1.093 0 2.617.27 3.5.743V10c-.883-.473-2.407-.743-3.5-.743s-2.117.27-3 .743V.743a6.344 6.344 0 0 1 3-.743Z' fill='%23fff'/%3E%3C/svg%3E");
 }
 
 .search-item-title {
-  @apply text-slate-700 leading-6 truncate;
+  grid-column-start: 2;
+  @apply leading-6 truncate;
 }
 
 .search-item-title + .search-item-path {
@@ -363,102 +306,13 @@ select {
 }
 
 .search-item-action {
-  @apply flex-none ml-3.5;
+  @apply flex-none ml-3.5 w-6 h-6;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
-.search-item.result {
-  .search-item-action svg {
-    @apply hidden;
-  }
-
-  .search-item-action {
-    @apply w-6 h-6;
-    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  }
-
-  [aria-selected='true'] & .search-item-action {
-    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  }
-
-  .search-item[aria-selected='true'] & .search-item-path {
-    @apply bg-sky-400 text-white;
-  }
-
-  .search-item[aria-selected='true'] & .search-item-title {
-    @apply text-white;
-  }
-}
-
-.search-item-action-button {
-  @apply flex;
-}
-
-.search-item-action + .search-item-action {
-  @apply ml-2;
-}
-
-.search-item-action path {
-  stroke-width: 2px;
-  stroke: #71717a;
-}
-
-.search-item[aria-selected='true'] .search-item-action path {
-  stroke: white;
-}
-
-.search-item.result {
-  @apply py-3 px-4 !important;
-}
-
-.search-item {
-  @apply relative;
-}
-
-.search-item:first-child > a {
-  @apply border-t border-slate-100;
-}
-
-.search-item.result {
-  @apply border-t-0 !important;
-}
-
-.search-item + .search-item .search-item.result {
-  @apply mt-2;
-}
-
-.search-item.result {
-  @apply bg-slate-50 rounded-lg;
-}
-
-.search-item > a:hover,
-.search-item[aria-selected='true'] > a {
-  @apply bg-slate-50;
-}
-
-.search-item[aria-selected='true'] .search-item.result {
-  @apply bg-sky-500;
-}
-
-.search-item.FirstChild::before {
-  @apply top-0 !important;
-}
-
-.search-item.LastChild::before {
-  @apply bottom-0 !important;
-}
-
-#search-results mark {
-  background: none;
-  @apply text-sky-600 font-semibold border-b-2 border-sky-300;
-}
-
-.search-item-path mark {
-  @apply border-0;
-}
-
-.search-item[aria-selected='true'] mark {
-  color: inherit;
-  border-bottom-color: currentColor;
+.search-item:hover .search-item-action,
+.search-item:focus-within .search-item-action {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%236466F1' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
 .search-footer {
@@ -473,26 +327,12 @@ select {
   @apply w-6 h-auto ml-2 text-red-600;
 }
 
-.search-item.deleting,
-.search-item.favoriting {
-  opacity: 0;
-  transition: all 250ms linear;
-}
-
-.search-no-results .search-screen-Icon {
-  @apply hidden;
-}
-
 .search-title {
   @apply text-lg leading-6 mb-10;
 }
 
 .search-title strong {
   @apply text-slate-900 font-normal;
-}
-
-.search-StartScreen .search-Help {
-  @apply text-center text-slate-400 py-16 px-6;
 }
 
 .search-no-results {
@@ -502,99 +342,4 @@ select {
 .search-no-results .search-title {
   text-align: center;
   color: theme('colors.slate.400');
-}
-/* 
-.search-no-results-Prefill-List .search-Help {
-  @apply text-sm leading-6 font-semibold mb-3 text-slate-900;
-}
-
-.search-no-results-Prefill-List ul {
-  @apply rounded-lg bg-slate-50 border border-slate-200 overflow-hidden;
-}
-
-.search-no-results-Prefill-List button {
-  padding: 0.5rem 0.75rem;
-  display: block;
-  width: 100%;
-  text-align: left;
-  font-size: theme('fontSize.sm');
-  line-height: theme('lineHeight.6');
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: right 0.75rem center;
-
-  @apply text-slate-700;
-}
-
-.search-no-results-Prefill-List li + li button {
-  @apply border-t border-slate-200;
-}
-
-.search-no-results-Prefill-List + .search-Help {
-  @apply text-xs leading-6 mt-3;
-}
-
-.search-no-results-Prefill-List + .search-Help a {
-  @apply text-sky-500 font-semibold;
-} */
-
-.search-item-action [title='Save this search'],
-.search-item-action [title='Remove this search from history'],
-.search-item-action [title='Remove this search from favorites'] {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.search-item-action [title='Save this search'] svg,
-.search-item-action [title='Remove this search from history'] svg,
-.search-item-action [title='Remove this search from favorites'] svg {
-  display: none;
-}
-
-.search-item-action [title='Save this search'] {
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' stroke='%23CBD5E1' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.search-item-action [title='Save this search']:hover {
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' stroke='%230ea5e9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.search-item-action [title='Remove this search from history'] {
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394A3B8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.search-item-action [title='Remove this search from history']:hover {
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.search-item-action [title='Remove this search from favorites']::before {
-  @apply absolute inset-0 content-[''] pointer-events-none bg-sky-50;
-}
-
-.search-item[aria-selected='true'] [title='Remove this search from favorites']::before {
-  @apply bg-sky-100;
-}
-
-.search-item-action [title='Remove this search from favorites']::after {
-  content: '';
-  position: absolute;
-  pointer-events: none;
-  width: calc(4.5rem + 1px);
-  height: 1.5rem;
-  margin-left: calc(-3rem - 1px);
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' fill='%230EA5E9' stroke='%230EA5E9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"),
-    url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23e2e8f0' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1' height='1'/%3E%3C/svg%3E"),
-    url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394A3B8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  background-repeat: no-repeat, repeat-y, no-repeat;
-  background-position: left, center, right;
-}
-
-.search-item-action [title='Remove this search from favorites']:hover::after {
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' fill='%230EA5E9' stroke='%230EA5E9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"),
-    url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23e2e8f0' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1' height='1'/%3E%3C/svg%3E"),
-    url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.search-item-action + .search-item-action {
-  @apply ml-3 pl-3 border-l border-slate-200;
 }
